--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Click==7.0
+Click==7.1.2
 Flask==1.0.2
 itsdangerous==1.1.0
 Jinja2==2.10.3
@@ -12,3 +12,4 @@ scipy==1.3.1
 six==1.12.0
 Werkzeug==0.16.0
 pylint==2.4.4
+joblib==1.0.0
